Fix overflow playback

--- a/app/styles/components/_playback.scss
+++ b/app/styles/components/_playback.scss
@@ -48,6 +48,7 @@
 	left: 1rem;
 	top: 0;
 	bottom: 0;
+	overflow: hidden;
 
 	a:hover {
 		text-decoration: none;
